<resources>
    <string name="app_name">Pickle Balls</string>
    <string name="email">Email</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="sign_up">ĐĂNG KÝ</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="booking">Đặt sân</string>
    <string name="home">Trang chủ</string>
    <string name="notification">Thông báo</string>
    <string name="user">Người dùng</string>
    <string name="search_hint">Nhập nội dung để tìm kiếm</string>
    <string name="all_court">Tất cả sân</string>
    <string name="favourite_court">Sân yêu thích</string>
    <string name="near_you">Gần bạn</string>
    <string name="popular_court_cluster">Phổ biến</string>
    <string name="highly_rated">Đánh giá cao</string>
    <string name="select_day">Chọn ngày</string>
    <string name="booking_court">Đặt sân</string>
    <string name="booking_detail">Thông tin lịch đặt sân</string>
    <string name="select_court">Chọn sân</string>
    <string name="select_time_slot">Chọn giờ</string>
    <string name="book_court">Đặt sân</string>
    <string name="confirm_booking">Xác nhận lịch đặt</string>
    <string name="cancel_book_court">Hủy đặt sân</string>
    <string name="confirm_payment">Xác nhận thanh toán</string>
    <string name="court_label">Sân</string>
    <string name="search">Tìm kiếm</string>
    <string name="list_booking">Danh sách lịch đặt sân</string>
    <string name="search_court_cluster">Tìm kiếm cụm sân</string>
    <string name="court_cluster_detail">Thông tin cụm sân</string>
    <string name="manage_court_price">Quản lý giá sân</string>
    <string name="update">Cập nhật</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Xin chào, fragment trống</string>
    <string name="title_activity_login">Màn hình đăng nhập</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập hoặc đăng ký</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="welcome">Chào mừng!</string>
    <string name="invalid_username">Tên người dùng không hợp lệ</string>
    <string name="invalid_password">Mật khẩu phải lớn hơn 5 ký tự</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="enter_name_or_address">Nhập tên hoặc địa chỉ cụm sân để tìm kiếm</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string-array name="filter_options1">
        <item>Doanh thu</item>
        <item>Số lượt đặt</item>
    </string-array>

    <string-array name="filter_options2">
        <item>7 ngày</item>
        <item>30 ngày</item>
        <item>90 ngày</item>
    </string-array>

    <string-array name="filter_options3">
        <item>Tăng dần</item>
        <item>Giảm dần</item>
    </string-array>
</resources>
