<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="@dimen/dp_35"
        android:layout_height="@dimen/dp_35"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/bookingCourtTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_court"
        android:textStyle="bold"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/courtClusterNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="San pickleball 123"
        android:textStyle="bold"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/bookingCourtTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/selectDayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_day"
        android:textStyle="bold"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_10"/>

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="11/11/2024"
        android:textStyle="bold"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_10"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectDayTextView"
        android:layout_marginTop="@dimen/dp_10"/>

    <TextView
        android:id="@+id/selectCourtTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_court"
        android:textStyle="bold"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewDay"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_10"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCourt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectCourtTextView"
        android:layout_marginTop="@dimen/dp_10"/>

    <TextView
        android:id="@+id/selectTimeSlotTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_time_slot"
        android:textStyle="bold"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewCourt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_10"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTimeSlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectTimeSlotTextView"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintBottom_toTopOf="@id/PayButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/PayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_court"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"/>

</androidx.constraintlayout.widget.ConstraintLayout>