<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16"
    tools:context=".screen.courtowner.bookschedule.detail.BookingCourtOwnerDetailActivity">

    <TextView
        android:id="@+id/tvCourtClusterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Tên cụm sân"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Địa chỉ"
        android:textSize="14sp"
        android:drawableStart="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCourtClusterName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_8" />

    <TextView
        android:id="@+id/tvTimeBooking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Thời gian cập nhật: "
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddress"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_8" />

    <TextView
        android:id="@+id/tvDateUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Thời gian dùng sân"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTimeBooking"
        android:layout_marginTop="@dimen/dp_8"/>

    <TextView
        android:id="@+id/tvStatusValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Trạng thái"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDateUse"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_8" />

    <TextView
        android:id="@+id/tvPriceValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Giá tiền"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatusValue"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_8" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Số điện thoại"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPriceValue"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_8" />

    <TextView
        android:id="@+id/tv_courtTimeSlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Danh sách chỗ đặt sân:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhone"
        android:layout_marginTop="@dimen/dp_10"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTimeSlots"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_courtTimeSlot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancelButton"
        android:layout_marginTop="@dimen/dp_16" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_book_court"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:padding="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"/>

    <Button
        android:id="@+id/confirmBookingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_booking"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:padding="@dimen/dp_5"
        app:layout_constraintEnd_toStartOf="@id/cancelButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"/>

    <Button
        android:id="@+id/confirmPaymentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_payment"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:padding="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"/>
</androidx.constraintlayout.widget.ConstraintLayout>
